@@ -1,3 +1,7 @@
+Changelog 0.3.37 [20230301]:
+- Added New Setting "Disable Scraping Screen Fanart" 
+- Added New Setting "Disable Scraping Screen Clearlogo"
+
 Changelog 0.3.36 [20230228]:
 - Add Nyaa provider
 
